fix: solve `main` container overflow problem

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,6 +34,8 @@ article {
 	padding: 2em;
 	flex-grow: 1;
 	flex-shrink: 0;
+	overflow: hidden;
+	white-space: nowrap;
 }
 
 .page-collection nav {
@@ -46,7 +48,7 @@ article {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	flex: 1 0 auto;
+	flex: 1 1 auto;
 	margin-top: 3em;
 	padding-left: 3em;
 	padding-right: 3em;
